# create-systemd-service

./: Cargo.toml  LICENSE  README.md
data/: 01Simple1.service  03Simple3.service  05docker-compose@.service  Simple 1.service  Simple 2.service  docker-compose@.service  simple1.service
src/: app.rs  command.rs  editinglist.rs  main.rs  statefullist.rs  syntax.rs  ui.rs
src/resources/INI/: INI.sublime-syntax
src/resources/monokai/: monokai.tmTheme
