[package]
name = "create-systemd-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetreelist = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
derive_builder = "0.11.2"
tui = { version = "0.18.0", default-features = false, features = [
    'crossterm',
    'serde',
] }
crossterm = { version = "0.25.0", features = ["serde"] }
bat = "0.21.0"
nix = "0.24.2"
dialoguer = "0.10.2"
directories = "4.0.1"
