[package]
name = "create-systemd-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.11.2"
tui = { version = "0.19.0", default-features = false, features = [
    'crossterm',
    'serde',
] }
crossterm = { version = "0.25.0", features = ["serde"] }
nix = "0.25.0"
dialoguer = "0.10.2"
directories = "4.0.1"
syntect = "5.0.0"
regex = "1.6.0"
